<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginTop="8dp"
    android:paddingBottom="5dp"
    android:layout_marginBottom="5dp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">



    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/post_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/circle_background"
        android:padding="5dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/doctor"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/post_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:textColor="@color/editTextColor"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/post_image"
        app:layout_constraintTop_toTopOf="@id/post_image"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        />

    <TextView
        android:id="@+id/post_isDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_Doctor"
        android:textColor="@color/editTextColor"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/post_name"
        app:layout_constraintTop_toTopOf="@id/post_image"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        />

    <TextView
        android:id="@+id/post_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_date"
        android:textColor="@color/editTextColor"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/post_name"
        app:layout_constraintTop_toBottomOf="@id/post_name"
        android:layout_marginTop="6dp"
        />

    <TextView
        android:id="@+id/post_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:padding="6dp"
        android:text="blablablablablablablablablablablablablablablablablablablablablablablablablablablablablablablablablablablablabla
        blablablablablablablablablablablablablablablablablablablablablablablablablablablablabl
        ablablablablablablablablablablablablablablablablablablablablablablablablablablablablablablablablablabla"
        android:textColor="@color/editTextColor"
        app:layout_constraintTop_toBottomOf="@id/post_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/line1"
        />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintTop_toBottomOf="@id/post_content"
        app:layout_constraintBottom_toTopOf="@id/post_linear"/>

    <LinearLayout
        android:id="@+id/post_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/post_content">

        <Button
            android:id="@+id/post_like"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/like"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/post_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/Comment"
            android:textColor="@color/black"
            android:textSize="16sp"/>

    </LinearLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/light_black"
        app:layout_constraintTop_toBottomOf="@id/post_linear"
       />

    <LinearLayout
        android:id="@+id/post_linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="6dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/line2">

        <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="8"
            android:padding="8dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/writeComment"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/ic_send"
            />
    </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>