<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context="com.example.crazynet.medicalhub.MainActivity">

   <TextView
       android:id="@+id/txt_name"
       android:layout_width="match_parent"
       android:layout_height="70dp"
       android:text="MEDICAL HUB"
       android:textColor="@color/colorAccent"
       android:textStyle="bold"
       android:gravity="center"
       android:textSize="32sp"
       android:fontFamily="@font/aldrichregular"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       android:layout_marginTop="30dp"/>

    <ImageView
        android:id="@+id/user_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_user_name"
        app:layout_constraintTop_toBottomOf="@id/txt_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin_start_end"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="50dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/user_logo"
        app:layout_constraintTop_toBottomOf="@id/txt_name"
        android:layout_marginLeft="@dimen/margin_start_end"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="38dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/editTextColor"
            android:hint="@string/Username"/>

    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/pass_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_password"
        app:layout_constraintTop_toBottomOf="@id/user_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin_start_end"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="50dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/pass_logo"
        app:layout_constraintTop_toBottomOf="@id/user_input"
        style="Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_marginLeft="@dimen/margin_start_end"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="34dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/editTextColor"
            android:hint="@string/Password"/>

    </android.support.design.widget.TextInputLayout>

   <android.support.v7.widget.CardView
       android:id="@+id/login_card"
       android:layout_width="@dimen/button_width"
       android:layout_height="@dimen/button_hight"
       app:cardCornerRadius="3dp"
       android:elevation="@dimen/elevation_corner"
       android:layout_marginTop="70dp"
       app:layout_constraintTop_toBottomOf="@id/input_pass"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintLeft_toLeftOf="parent">

       <Button
           android:id="@+id/button_login"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:text="@string/Login"
           android:textColor="@color/white"
           android:background="@color/button_background"/>

   </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/sign_card"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_hight"
        app:cardCornerRadius="3dp"
        android:elevation="@dimen/elevation_corner"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/login_card"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <Button
            android:id="@+id/button_createAccount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/createAccount"
            android:textColor="@color/white"
            android:background="@color/button_background"/>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetPassword"
        android:textSize="17sp"
        android:textColor="@color/text_color"
        app:layout_constraintTop_toBottomOf="@id/sign_card"
        app:layout_constraintRight_toRightOf="@id/sign_card"
        app:layout_constraintLeft_toLeftOf="@id/sign_card"
        android:layout_marginTop="35dp"
        />

</android.support.constraint.ConstraintLayout>
